Tue Feb 17 20:49:23 GMT 2004 (njh)
----------------------------------
  * libclamav: Added a new bounce delimeter
  * test:	Updated mbox/debugm.c compilation instructions
  		removed SIGINT signal handler

Tue Feb 17 17:09:24 GMT 2004 (trog)
-----------------------------------
  * clamd: SIGHUP re-open log file support

Tue Feb 17 09:59:03 GMT 2004 (njh)
----------------------------------
  * libclamav: Added a new bounce delimeter

Tue Feb 17 01:06:58 CET 2004 (tk)
---------------------------------
  * clamd: + integrated new thread manager from Trog
	   + --debug (enables core dumping)
  * contrib: Trashscan v0.10 (trashware*gmx.de)

Mon Feb 16 14:19:42 CET 2004 (tk)
---------------------------------
  V 0.67-1 (increased version number of clamav-milter)

Mon Feb 16 12:00:06 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Added clamfi_free, this helps to ease the task
  		of writing cleanups for unexpected errors

Mon Feb 16 09:44:34 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Upissued to 0.67
  * docs:		Documented support for TCPWrappers in clamav-milter
  		This is experimental - feedback welcomed

Sun Feb 15 14:10:19 CET 2004 (tk)
---------------------------------
  V 0.67 (released with OLE2 and Dazuko support disabled)

Sun Feb 15 12:06:12 GMT 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: Fix memory leak

Sun Feb 15 12:52:25 CET 2004 (tk)
---------------------------------
  * freshclam: fixed proxy user/pass buffer overflow (it was causing
	       problems with HTTPProxy* directives). Thanks to
	       Bill Maidment <bill*maidment.com.au>.

Sun Feb 15 08:50:21 GMT 2004 (njh)
----------------------------------
  * libclamav:	added blobClose and blobCmp to reduce likelyhood of scanning the
			same file twice and reducing the runtime memory usage
	support video within multiparts
	better warning of unsupported types that may need to be added later