@@ -235,6 +235,7 @@ fi
 
 # check for in_port_t definition
 AC_TRY_RUN([#include <netinet/in.h>
+#include <sys/types.h>
 int main(int argc, char **argv) { in_port_t pt; pt = 0; return pt; }],
 AC_DEFINE(HAVE_IN_PORT_T,1,[in_port_t is defined]), AC_MSG_RESULT(in_port_t is not defined))
 
